# ptcgp-sim

./: A1.json  A1a.json  A2.json  A2a.json  A2b.json  A3.json  A3a.json  A3b.json  A4.json  A4a.json  CLI_PATCH.txt  VARIANT_README.txt  desktop.ini  pyproject.toml  test_deck.json
ptcgp_sim/: README.md  pyproject.toml
ptcgp_sim.egg-info/: SOURCES.txt  top_level.txt
ptcgp_sim/meta/: meta_decks_full.json
ptcgp_sim/ptcgp_sim/: __init__.py  all_cards.json  all_cards_versioned.json  card_db.py  card_db_eevee_grove.json  card_db_example.json  cli.py  costs.py  deckio.py  energy.py  mechanics.py  meta_runner.py  policy_baseline.py  rng.py  rules.json  simulator.py  types.py  validator.py
ptcgp_sim/ptcgp_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ptcgp_sim/tests/: test_attack_resolution.py  test_costs.py  test_deck_validator.py  test_energy_generation.py  test_simulator_smoke.py
