[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptcgp-sim"
version = "0.1.0"
description = "Minimal, deterministic simulator for Pokemon TCG Pocket (PTCGP) with random energy typing logic."
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "rich>=13.7.0"
]

[project.scripts]
ptcgp = "ptcgp_sim.cli:app"
